@@ -69,6 +69,7 @@ Chronological list of authors
   - Mattia F. Palermo
   - Utkarsh Saxena
   - Abhinav Gupta
+  - John Detlefs
 
 External code
 -------------
