@@ -13,7 +13,7 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-??/??/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm
+??/??/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jdetle
 
   * 0.15.0
 
@@ -32,7 +32,8 @@ Enhancements
   * Add conda build scripts (Issue #608)
 
 Fixes
-
+  
+  * change_release now finds number and dev (Issue #776) 
   * test_shear_from_matrix doesn't fail for MKL builds anymore (Issue #757)
   * HEADER and TITLE now appear just once in the PDB. (Issue #741) (PR #761)
 
